--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="text_prompt">请输入内容</string>
 
     <string name="service_btn">服务测试</string>
+    <string name="verify">发送验证码</string>
+    <string name="score">0.0</string>
 </resources>
